# aegis-seal

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: aegis.yml
contrib/github-action/: action.yml
sample_project/: README.md  app.py  config.yaml  keys.txt
scripts/: build_wheel.ps1  build_wheel.sh
src/aegisseal/: __init__.py  cli.py
src/aegisseal/fix/: __init__.py  libcst_fix.py
src/aegisseal/report/: __init__.py  html.py  json_report.py  sarif.py
src/aegisseal/rules/: core.yaml
src/aegisseal/scanning/: __init__.py  baseline.py  detectors.py  engine.py  entropy.py  suppression.py
src/aegisseal/utils/: __init__.py  ids.py  io.py
tests/: conftest.py  test_action_stub.py  test_baseline.py  test_baseline_suppress.py  test_build_wheel.py  test_cli_entry.py  test_cli_examples.py  test_entropy_optin.py  test_fix_dryrun.py  test_fix_edges.py  test_html_singlefile.py  test_package_data.py  test_perf_parallel.py  test_precommit_stub.py  test_rules_pack.py  test_rules_precision.py  test_sarif_html.py  test_sarif_minimal.py  test_scan_regex.py
tests/factories/: __init__.py  tokens.py
tests/fixtures/negatives/: false_positives.txt
tests/fixtures/positives/: cloud_secrets.txt  dev_tokens.txt
