[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-seal"
version = "0.1.7"
description = "Local-first secret scanner with auto-fix capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aegis Seal Contributors", email = "aegis-seal@example.com"}
]
maintainers = [
    {name = "Aegis Seal Contributors", email = "aegis-seal@example.com"}
]
requires-python = ">=3.11"
keywords = [
    "security",
    "secrets",
    "scanner",
    "static-analysis",
    "secret-detection",
    "sarif",
    "devsecops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "libcst>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/aegis-seal"
Documentation = "https://github.com/your-org/aegis-seal/blob/main/README.md"
Repository = "https://github.com/your-org/aegis-seal.git"
Issues = "https://github.com/your-org/aegis-seal/issues"
Changelog = "https://github.com/your-org/aegis-seal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
aegis-seal = "aegisseal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegisseal = ["rules/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
